fix shapes on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -174,6 +174,10 @@ h2 {
 
 /* Shapes */
 
+#shapes {
+    display: none;
+}
+
 @media (min-width: 1365px) {
     #shapes {
         position: absolute;
@@ -181,6 +185,7 @@ h2 {
         left: 0;
         width: 100%;
         height: auto;
+        display: inherit;
     }
 
     #grid {
